# family-altar-book-processor

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
book_processor/: __init__.py  text_utils.py
test/: test_text_utils.py
test-notebooks/: test_read_from_txt.ipynb
